A.F....... [ZBX-1357] updated Chinese (China), English (United States), Japanese, Korean, Turkish translations; thanks to Zabbix translators (zalex_ua)
..F....... [ZBXNEXT-4054] implemented feature to open first available dashboard from the list (Ivo)
..F....... [ZBXNEXT-4046] implemented dashboard widget minimum height limit (gcalenko)

Bug fixes:
A......... [ZBX-12699] added support of strings in "sortfield" and "sortorder" parameters for dashboard.get() (Sasha)
..F....... [ZBX-12577] added item select filter for simple graph to allow select only supported item (gcalenko)
..F....... [ZBX-12647] fixed map minimum severity option in screens (miks)
........S. [ZBX-12696] fixed trigger not being calculated for newly received item values if last one of those is unsupported value (vso)
..F....... [ZBX-12548] fixed notification sound not being played for message with timeout set to greater than minute (gcalenko)
...G...... [ZBX-12653] fixed heap corruption in Windows agent; thanks to Ronnie Kaech for the patch (abs)
A......... [ZBX-12660] fixed result of hostinterface.replacehostinterfaces method (Sasha)
..F....... [ZBX-12469] added new context for 'Second' string to be properly translated in maintenance period form (gcalenko)
..F....... [ZBX-12616] fixed trapper item "Allowed hosts" field user macro support (gcalenko)
.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
...G...PS. [ZBX-10820] fixed potential loss of data when server/proxy processes zabbix_sender data (Andris)
...G...PS. [ZBX-4252] eliminated sending of DNS AAAA queries when checking IPv4 incoming connection in agent or for trapper item and A queries in case of IPv6 (Andris)
..F....... [ZBXNEXT-2102] fixed multiple browser sensitive javascript bugs in navigation tree widget and improved coding style (miks)
..F....... [ZBX-12623] fixed label macro resolving in maps (vjaceslavs)