@@ -7,6 +7,7 @@ A.F....... [ZBX-1357] updated Chinese (China), English (United States), Japanese
 ..F....... [ZBXNEXT-4046] implemented dashboard widget minimum height limit (gcalenko)
 
 Bug fixes:
+..F....... [ZBX-12617] fixed sorting by host name for items on availability report page (gcalenko)
 A......... [ZBX-12699] added support of strings in "sortfield" and "sortorder" parameters for dashboard.get() (Sasha)
 ..F....... [ZBX-12577] added item select filter for simple graph to allow select only supported item (gcalenko)
 ..F....... [ZBX-12647] fixed map minimum severity option in screens (miks)
